# esp32-captive-portal-bridge

./: CMakeLists.txt  LICENSE  README.md  sdkconfig  sdkconfig.old
main/: CMakeLists.txt  Kconfig.projbuild  main.c  router_config.c  router_config.h  router_diag.c  router_diag.h  router_dns.c  router_dns.h  router_log.h  router_nat.c  router_nat.h  router_netif.c  router_netif.h  router_portal.c  router_portal.h  router_probe.c  router_probe.h  router_storage.c  router_storage.h  router_system.c  router_system.h  router_wifi.c  router_wifi.h
main/LCD_Driver/: ST7789.c  ST7789.h
main/LVGL_Driver/: LVGL_Driver.c  LVGL_Driver.h
main/LVGL_UI/: LVGL_Example.h
main/RGB/: RGB.h
main/SD_Card/: SD_SPI.c  SD_SPI.h
main/Wireless/: Wireless.c
